@@ -1,4 +1,7 @@
 API ChangeLog
+18-Dec-2015     Peter von Kaehne <refdoc@crosswire.org>
+	Added image and table handling to TEI xhtml and htmlhref filters
+	contributed by Dominique Corbex <dominique.corbex@gmail.com> 
 
 15-Dec-2014	DM Smith <dmsmith@crosswire.org>
 	Fixed endless loop in osis2mod for some inputs.
